CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
SET(LIBHELLO_SRC hello.c)

ADD_LIBRARY(hello_dynamic SHARED ${LIBHELLO_SRC})
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})

SET_TARGET_PROPERTIES(hello_dynamic PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello_dynamic PROPERTIES VERSION 1.2 SOVERSION 1)

SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

INSTALL(TARGETS hello_dynamic hello_static
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
        
INSTALL(FILES hello.h DESTINATION include/hello)
