CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

ADD_EXECUTABLE(main main.c)

INCLUDE_DIRECTORIES(../include/hello)

LINK_LIBRARIES(HELLO_LIB NAMES hello PATHS "../lib/")

MESSAGE(STATUS "Library path HELLO_LIB is " ${HELLO_LIB})

TARGET_LINK_LIBRARIES(main ${HELLO_LIB})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
