CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

FIND_PACKAGE(HELLO)

if(HELLO_FOUND)
  ADD_EXECUTABLE(hello main.c)
  INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
  TARGET_LINK_LIBRARIES(hello ${HELLO_LIBRARY})
else(HELLO_FOUND)
  MESSAGE(FATAL_ERROR "HELLO library not found")
endif(HELLO_FOUND)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
